Fix spacing on hakemus arivointi

--- a/va-virkailija/web/va/style/budgetedit.less
+++ b/va-virkailija/web/va/style/budgetedit.less
@@ -1,6 +1,7 @@
 @import "npm://va-common/web/va/style/soresu-va.less";
 
 #budget-edit-container {
+  margin-top: 20px;
   .va-budget {
     .soresu-tooltip {
       display: none;
@@ -10,7 +11,7 @@
       width: 100%;
     }
     .summing-table {
-      margin-top: 10px;
+      margin-top: 20px;
       &:first-child {
         margin-top: 0;
       }
