--- a/va-virkailija/web/va/style/virkailija.less
+++ b/va-virkailija/web/va/style/virkailija.less
@@ -281,7 +281,7 @@ input[type=radio] {
     border: 2px solid transparent;
     border-radius: 2px;
     margin: 0;
-    padding: 4px 8px;
+    padding: 4px 18px;
   }
 
   &--vertical {
